--- a/src/views/users.pug
+++ b/src/views/users.pug
@@ -1,8 +1,8 @@
 extends layout
 
 block content
-  h1 LETSGO users list
-  p Welcome
+  h1 List of LETSGO users
+  p Welcome to the LETSGO user list. Here you can see all the users that have signed up for the LETSGO service.
 
   h2 Users
   ul#users
