--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,5 +1,13 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  .page
+    nav
+      span logo
+    main
+      h1= title
+      p Welcome to #{title}
+      p#main-promo.promo New to town? Just in the city for a few days? Let's find the best events and activities to do together!
+      p Here you can find events and activities that you can do with other people. You can also create your own events and activities and invite other people to join you.
+      a.find.find-findevent(href='/meetings') Find events and activities
+      a.find.find-finduser(href='/users') Find users to do activities with
